# fingers_rsa

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: .gitignore  download_data.sh
fingers_rsa/: mds_utils.py  nwb_utils.py  plot_utils.py  rdm_utils.py
models/: Able-bodied (MC).hdf5  Able-bodied (PC-IP).hdf5  Muscle.hdf5  Somatotopic.hdf5  Usage.hdf5  unstructured.hdf5
scripts/: calc_rdm.py  crossval_classify.py  learning_analysis.py  peth.py  plot_rdms.py  representational_dynamics_analysis.py  representational_similarity_analysis.py
scripts/config/: README.md  crossval_classify.yaml  learning.yaml  peth.yaml  rda.yaml  rdm.yaml  rsa.yaml
scripts/config/array/: ns_ppc.yaml
scripts/config/experiment/: session_sweep.yaml
scripts/config/matplotlib/: base.yaml  confusion_matrix.yaml  peth.yaml  rdm.yaml
scripts/config/neurons/: figure1_peth.yaml
scripts/config/rsa/models/: able_bodied.yaml  able_bodied_pcip.yaml  muscle_somatomorphic.yaml  muscle_somatotopic.yaml  usage_somatomorphic.yaml  usage_somatotopic.yaml
scripts/config/seaborn/: tol_bright.yaml
scripts/config/sweep/: all_sessions.yaml  all_sessions_and_times.yaml
scripts/config/task/: fingergrid.yaml
scripts/config/task/override/: cue_location.yaml
scripts/config/task/sessions/: fingergrid_ns_ppc.yaml
