[tool.poetry]
name = "fingers_rsa"
version = "1.0.0"
description = "Stability of motor representations after paralysis"
authors = ["Charles Guan <cguan@caltech.edu>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
pynwb = "^2.1"
pandas = "^1.2"
numpy = "^1.13"
xarray = "^2022.3"
prince = {git = "https://github.com/MaxHalford/prince.git", rev="c18eff92efbac57e4cd3657a6999cee8d1fcb906"}
rsatoolbox = "0.0.4"
hydra-core = "^1.1"
hydra-colorlog = "^1.1"
matplotlib = "^3.5"
scikit-learn = "^1.0"
seaborn = "^0.12"
statsmodels = "^0.13"
dandi = ">=0.13.0"
joblib = "^1.1"
tqdm = ">=4.0"

[tool.poetry.dev-dependencies]
hydra-joblib-launcher = "^1.1"  # Parallel job launching
pudb = ""       # debugger
pre-commit = "" # hooks for applying linters on commit
black = ""      # code formatting
isort = ""      # import sorting
flake8 = ""     # code analysis

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
